# custom_map_reg

./: ..bashrc.swp  .gitignore  CMakeLists.txt  README.md  aruco  config.yml  main  main.cpp  map.txt
markers/: aruco_markers.cpp  aruco_markers.h  markers.h  solver.cpp  solver.h
